Fixed extra margin

--- a/client/src/Styles/components/_card.scss
+++ b/client/src/Styles/components/_card.scss
@@ -1,3 +1,11 @@
+.card:first-child {
+    margin-top: 0;
+}
+
+.card:last-child {
+    margin-bottom: 0;
+}
+
 .card
 {
 
